--- a/FacultyPanel/Shared/MainLayout.razor
+++ b/FacultyPanel/Shared/MainLayout.razor
@@ -1,4 +1,7 @@
 ﻿@inherits LayoutComponentBase
+@using FacultyPanel.Authentication;
+@inject AuthenticationStateProvider authStateProvider
+@inject NavigationManager nm
 
 <PageTitle>FacultyPanel</PageTitle>
 
@@ -8,12 +11,30 @@
     </div>
 
     <main>
+
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <AuthorizeView>
+                <Authorized>
+                    <a @onclick="Logout" href="javascript:void(0)" class="btn btn-outline-primary btn-sm">Logout</a>
+                </Authorized>
+                <NotAuthorized>
+                    <a href="/login" class="btn btn-outline-primary btn-sm">Login</a>
+                </NotAuthorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
             @Body
         </article>
+
     </main>
 </div>
+
+@code {
+    private async Task Logout()
+    {
+        var customAuthStateProvider = (CustomAuthenticationStateProvider)authStateProvider;
+        await customAuthStateProvider.UpdateAuthenticationState(null);
+        nm.NavigateTo("/", true);
+    }
+}
