--- a/StudentPanel/Pages/Login/Login.razor
+++ b/StudentPanel/Pages/Login/Login.razor
@@ -30,7 +30,7 @@
                         <form>
                             <!-- Email input -->
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="form3Example3">Username</label>
+                                <label class="form-label" for="form3Example3">Email</label>
                                 <input @bind="model.Email" type="text" id="form3Example3" class="form-control" placeholder="Enter Email"/>
                             </div>
 
