--- a/StudentPanel/Pages/Student/Student.razor
+++ b/StudentPanel/Pages/Student/Student.razor
@@ -3,7 +3,6 @@
 @using ClassLibraryModel
 @using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider
-
 @attribute [Authorize(Roles = "Student")]
 
 <h3>Student</h3>
@@ -20,34 +19,30 @@
 <div class="row row-cols-1 row-cols-md-2 g-4">
 	@foreach (var item in stdData)
 	{
-			<div class="col">
-				<div class="card h-100">
-					<div class="card-body">
-						<p class="card-text">Student ID: @item.StdID</p>
-						<h5 class="card-title">
-						@item.StdFirstName
-						@item.StdLastName
-						</h5>
-						<h6 class="card-title">Gender: @item.GenderName</h6>
-						<h6 class="card-title">CNIC: @item.StdCNIC</h6>
-						<h6 class="card-title">Phone No: @item.StdPhoneNo</h6>
-						<h6 class="card-title">Email: @item.StdEmail</h6>
-						<h6 class="card-title">Country: @item.CountryName</h6>
-						<h6 class="card-title">City: @item.CityName</h6>
-						<h6 class="card-title">Address: @item.StdAddress</h6>
-						<h6 class="card-title">Last Education: @item.StdLastEducation</h6>
-						<h6 class="card-title">Organization: @item.OrgName</h6>
-						<h6 class="card-title">Department: @item.DeptName</h6>
-						<img class="card-title" id="imgLogo" src="@item.StdImage" />
-						<h6 class="card-title">Active: @item.StdIsActive</h6>
-					</div>
-					<div class="card-footer">
-						<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-							<a href="std/addnewstd/@item.StdID" class="btn btn-outline-primary me-md-2 mb-2 mb-md-0">Edit</a>
-						</div>
+		<div class="col">
+			<div class="card h-100">
+				<div class="card-body">
+					<h5 class="card-title">@item.StdFirstName @item.StdLastName</h5>
+					<h6 class="card-title">Gender: @item.GenderName</h6>
+					<h6 class="card-title">CNIC: @item.StdCNIC</h6>
+					<h6 class="card-title">Phone No: @item.StdPhoneNo</h6>
+					<h6 class="card-title">Email: @item.StdEmail</h6>
+					<h6 class="card-title">Country: @item.CountryName</h6>
+					<h6 class="card-title">City: @item.CityName</h6>
+					<h6 class="card-title">Address: @item.StdAddress</h6>
+					<h6 class="card-title">Last Education: @item.StdLastEducation</h6>
+					<h6 class="card-title">Organization: @item.OrgName</h6>
+					<h6 class="card-title">Department: @item.DeptName</h6>
+					<img class="card-title" id="imgLogo" src="@item.StdImage" />
+					<h6 class="card-title">Active: @item.StdIsActive</h6>
+				</div>
+				<div class="card-footer">
+					<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+						<a href="std/addnewstd/@item.StdID" class="btn btn-outline-primary me-md-2 mb-2 mb-md-0">Edit</a>
 					</div>
 				</div>
 			</div>
+		</div>
 	}
 </div>
 
@@ -73,4 +68,3 @@
 	}
 
 }
-
