--- a/StudentPanel/Shared/NavMenu.razor
+++ b/StudentPanel/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                         <span class="oi oi-plus" aria-hidden="true"></span> Profile
                     </NavLink>
                 </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="stdgroup/group">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Group
+                    </NavLink>
+                </div>
             </Authorized>
         </AuthorizeView>
 
