--- a/SuperAdmin/Pages/Faculty/AddNewFaculty.razor
+++ b/SuperAdmin/Pages/Faculty/AddNewFaculty.razor
@@ -7,6 +7,13 @@
 
 <h3>AddNewFaculty</h3>
 
+<style>
+	#imgLogo {
+		width: 90px;
+		height: 90px;
+	}
+</style>
+
 <br />
 <EditForm Model="faclModel" OnSubmit="SaveFacl">
 	<br />
@@ -129,18 +136,23 @@
 	<br />
 	<label>Image</label>
 	<br />
-	<input type="text" @bind-value="faclModel.FaclImage" placeholder="Enter Image" />
+	@if (imageUrl != null)
+	{
+		<img id="imgLogo" src="@imageUrl" />
+	}
+	<InputFile OnChange="HandleFileSelect"></InputFile>
 	<br />
 	<br />
-	<label>Is Active</label>
-	<br />
-	<div>
-		<input type="radio" id="true" name="faclModel.FaclIsActive" @bind="faclModel.FaclIsActive" checked>
-		<label for="true">Active</label>
-	</div>
-	<div>
-		<input type="radio" id="false" name="faclModel.FaclIsActive" @bind="faclModel.FaclIsActive">
-		<label for="false">Inactive</label>
+	<div class="form-group">
+		<label>Is Active?</label>
+		<div class="form-check">
+			<input class="form-check-input" type="radio" value="true" checked="@faclModel.FaclIsActive" @onchange="e => faclModel.FaclIsActive = true" />
+			<label class="form-check-label">Yes</label>
+		</div>
+		<div class="form-check">
+			<input class="form-check-input" type="radio" value="false" checked="@(!faclModel.FaclIsActive)" @onchange="e => faclModel.FaclIsActive = false" />
+			<label class="form-check-label">No</label>
+		</div>
 	</div>
 	<br />
 	<br />
@@ -155,7 +167,8 @@
 	public string? FaclID { get; set; }
 
 	public string? ButtonName { get; set; }
-	public string? imageSource { get; set; }
+	public string? imageUrl { get; set; }
+	public byte[]? buffer { get; set; }
 
 	private List<FaclModel>? faclData { get; set; }
 	private FaclModel faclModel { get; set; } = new FaclModel();
@@ -218,12 +231,12 @@
 				faclModel.DeptID = item.DeptID;
 				faclModel.FaclImage = item.FaclImage;
 				faclModel.FaclIsActive = item.FaclIsActive;
+				imageUrl = item.FaclImage;
 			}
 		}
 		else
 		{
 			ButtonName = "Save";
-			faclModel.FaclIsActive = true;
 		}
 	}
 
@@ -321,7 +334,7 @@
 				faclModel.QualID = qualification;
 				faclModel.OrgID = organization;
 				faclModel.DeptID = department;
-				faclModel.FaclImage = imageSource;
+				faclModel.FaclImage = imageUrl;
 				if (FaclDAL.SaveFacl(faclModel) == 1)
 				{
 					nm.NavigateTo("facl/faculty");
@@ -340,7 +353,7 @@
 				faclModel.QualID = qualification;
 				faclModel.OrgID = organization;
 				faclModel.DeptID = department;
-				faclModel.FaclImage = imageSource;
+				faclModel.FaclImage = imageUrl;
 				if (FaclDAL.EditFacl(faclModel) == 1)
 				{
 					nm.NavigateTo("facl/faculty");
@@ -354,10 +367,17 @@
 		faclData = FaclDAL.GetFaclByID(int.Parse(FaclID));
 	}
 
-
-	private void LoadImage()
+	private async Task HandleFileSelect(InputFileChangeEventArgs e)
 	{
-		imageSource = $"Images/naumanProfilePicture.jpg";
-	}
+		var file = e.File;
+		if (file != null)
+		{
+			using var stream = file.OpenReadStream();
+			buffer = new byte[file.Size];
+			await stream.ReadAsync(buffer, 0, (int)file.Size);
 
+			imageUrl = $"data:image/png;base64,{Convert.ToBase64String(buffer)}";
+			faclModel.FaclImage = imageUrl;
+		}
+	}
 }
