--- a/SuperAdmin/Pages/Position/Position.razor
+++ b/SuperAdmin/Pages/Position/Position.razor
@@ -1,6 +1,7 @@
 ﻿@page "/pos/positions"
 @using ClassLibraryDAL
 @using ClassLibraryModel
+@inject IJSRuntime JSRuntime
 @attribute [Authorize(Roles = "Administrator")]
 
 <h3>Positions</h3>
@@ -28,7 +29,7 @@
 				<td>
 					<a href="pos/addnewpos/@item.PosID" class="btn btn-outline-primary btn-sm">Edit</a>
 					<button class="btn btn-outline-danger btn-sm"
-					@onclick="(()=>DeletePos(item.PosID))">
+					@onclick="(()=>ConfirmDelete(item.PosID))">
 						Delete
 					</button>
 				</td>
@@ -48,6 +49,15 @@
 	private void LoadPos()
 	{
 		posData = PosDAL.GetPos();
+	}
+
+	private async Task ConfirmDelete(int PosID)
+	{
+		bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this item?");
+		if (confirmed)
+		{
+			DeletePos(PosID);
+		}
 	}
 
 	private void DeletePos(int PosID)
